Add uploads API, CORS, and Cesium edit UI
Introduce file upload endpoints and static serving: add backend upload blueprint (/api/upload, /api/upload/batch) and expose /uploads/<filename>. Enable CORS for /uploads/* and add /uploads proxy in vite dev server. Persist and expose site height: change Site longitude/latitude to Numeric, add height field and JSON conversion, and handle height in site create/update routes (also add no-cache headers and session refresh). Frontend: add uploadFile API and extensive CesiumViewer enhancements — edit mode with password, add/drag site markers, height support, media upload/management, cover upload, improved pick/drag handlers, hide globe/sky for 3D tiles, and lifecycle/cleanup fixes. Update seed data and docs path, and add .github to .gitignore.

--- a/docs/开发路线规划.md
+++ b/docs/开发路线规划.md
@@ -22,7 +22,7 @@
 ## 三、项目目录结构
 
 ```
-cjw/
+cjw_red_map/
 ├── 开发路线规划.md              # 本文件
 ├── 程家湾地图开发随记.md         # 任务描述
 ├── out/                         # 3D Tiles 1.1 原始数据 (GISBox 输出)
