Replace label with billboard canvas and style tweaks
Replace Cesium Label rendering with a Canvas-generated Billboard to support rounded, high‑DPI site labels and improved visuals. Add createSiteLabelCanvas(text) to draw rounded background, enlarged padding and bold text; update addSiteMarker to use billboard.image, add a translucent ellipse halo, adjust point size/outline and scaleByDistance. Remove inline coordinate text from labels and stop updating label.text during drag; submitEditSite now regenerates the billboard image when the name changes. Also update docs (地标标注) with detailed style/behavior changes and rationale.

--- a/docs/开发日志.md
+++ b/docs/开发日志.md
@@ -2,6 +2,90 @@
 
 ---
 
+## 2026-02-13 地标标注样式二次优化
+
+### 背景
+上一轮优化后，地标标签的字体和描边在某些视角下略显模糊，且光晕底座不够明显。用户希望进一步提升清晰度并扩大底座范围。
+
+### 变更内容
+
+#### 1. 字体清晰度提升
+- **字号加大**：从 `14px` 提升至 `18px`
+- **字重加粗**：从 `bold` (700) 提升至 `900`（最粗），增强可读性
+- **描边优化**：`outlineWidth` 从 `1` 增加到 `3`，颜色从 `BLACK` (alpha 0.6) 调整为 `BLACK` (alpha 0.8)，增强文字与背景的对比度，解决"糊"的问题
+
+#### 2. 光晕底座扩大
+- **半径**：半长轴/半短轴从 `3.5` 扩大至 `8.0`（面积增加约 5 倍）
+- **透明度**：从 `0.18` 提升至 `0.25`，使其在深色背景下更具辨识度
+
+### 效果预期
+- 标签文字在 3D 场景中将更加锐利和醒目
+- 红色光晕范围显著增大，使地标点在远景下更容易被发现
+
+---
+
+## 2026-02-13 地标标注样式美化
+
+### 背景
+地图中各地标点的标注样式较为粗糙，红色背景标签上显示了经度、纬度、高度等坐标信息，信息冗余且影响美观（如截图所示）。用户希望只保留地标名称，并优化整体视觉效果。
+
+### 变更内容
+
+#### 1. 标签文本精简
+移除标签中的经纬度和海拔高度信息，只保留地标名称。涉及三处文本设置：
+- **`addSiteMarker()`**：创建地标时的初始标签文本
+- **拖动事件 `MOUSE_MOVE`**：拖动调整位置时的实时标签更新
+- **`submitEditSite()`**：编辑保存后的标签同步更新
+
+#### 2. 视觉样式优化
+| 属性 | 旧值 | 新值 |
+|------|------|------|
+| 标签字体 | `bold 13px sans-serif` | `bold 14px "Microsoft YaHei", "PingFang SC", sans-serif` |
+| 背景色 | `#C41E24` alpha 0.85 | `#B91C1C` alpha 0.92（更深沉的红色） |
+| 背景内边距 | `8, 4` | `12, 6`（更宽松舒适） |
+| 文字描边 | 红色描边 2px | 黑色半透明描边 1px（更清晰） |
+| 标签水平对齐 | 未设置 | `CENTER`（居中于标注点上方） |
+| 点大小 | 14px | 10px（更精致） |
+| 点描边宽度 | 2px | 3px（白色外圈更醒目） |
+| 远近缩放 | 无 | `NearFarScalar(100, 1.4, 5000, 0.6)`（近大远小） |
+
+#### 3. 新增外圈光晕效果
+为每个地标新增一个半透明红色椭圆底座（`ellipse`），半径 3.5 米、透明度 0.18，使地标点在地图上更加醒目且有层次感。
+
+### 技术要点
+- 仅修改前端 `CesiumViewer.vue`，不涉及后端或数据库变更
+- 坐标信息仍保留在弹窗详情中，用户点击地标后依然可以查看
+- `scaleByDistance` 实现了根据视距自动缩放的效果，近景放大显示、远景缩小避免遮挡
+
+---
+
+## 2026-02-13 地标标注圆角化改造
+
+### 背景
+用户希望地标标注的背景框具有圆角效果，且边框范围更大。由于 Cesium 原生 `LabelGraphics` 不支持圆角背景（`showBackground` 只能是矩形），因此需要采用 Canvas 自定义绘制生成图片，并改用 `BillboardGraphics` 进行渲染。
+
+### 变更内容
+
+#### 1. 渲染方式重构
+- **Label → Billboard**：移除了原有的 `label` 实体组件，改为 `billboard` 组件。
+- **动态 Canvas 生成**：新增 `createSiteLabelCanvas(text)` 工具函数，使用 HTML5 Canvas API 动态绘制包含文字和圆角背景的图像。
+
+#### 2. 样式升级
+- **大圆角背景**：绘制圆角半径为 `20px` 的矩形，背景色保留深红 `#B91C1C` (Alpha 0.95)。
+- **内边距扩大**：水平内边距增加到 `32px`，垂直内边距增加到 `16px`，满足“边框改大”的需求。
+- **超清渲染**：Canvas 绘图字号设为 `32px`（比实际显示大），Billboard 缩放比例设为 `0.5`，确保在高分屏下文字边缘依然清晰锐利。
+
+#### 3. 逻辑适配
+- **Entity 更新逻辑**：在 `submitEditSite` 中，当地标名称修改后，不再设置 `label.text`，而是调用 `createSiteLabelCanvas` 重新生成图片并赋值给 `billboard.image`。
+- **拖动交互优化**：清理了拖动事件中尝试更新 `label.text` 的废弃代码。
+
+### 技术要点
+- **Canvas 绘图**：使用 `quadraticCurveTo` 绘制平滑圆角，避免兼容性问题。
+- **性能优化**：Canvas 仅在地标创建或名称修改时生成一次，后续渲染直接使用纹理，性能损耗可控。
+- **缩放策略**：保留了 `scaleByDistance` 配置，确保近大远小的视觉体验与之前保持一致。
+
+---
+
 ## 2026-02-13 术语统一 & 地标描述补充
 
 ### 背景
