Add DB export, config.example, seeds & docs
Introduce database distribution and deployment improvements: add backend/app/config.example.py as a config template, add backend/export_db.py to export mysqldump backups, expand backend/app/seeds.py with the full set of 7 initial landmarks, update README.md with detailed deployment and DB management instructions, and tighten .gitignore to avoid committing SQL backups and local config. These changes make it easier to initialize, back up and share the project while protecting sensitive local files.

--- a/docs/开发日志.md
+++ b/docs/开发日志.md
@@ -59,6 +59,82 @@
 
 ---
 
+## 2026-02-13 完善数据库分发方案
+
+### 背景
+为了便于项目在 GitHub 上开源分享，以及他人快速部署，需要提供完整的数据库初始化和备份/还原方案。
+
+### 变更内容
+
+#### 1. 完善种子数据（`backend/app/seeds.py`）
+将数据库中的所有 7 个红色地标数据补充到种子脚本中：
+
+| 地标名称 | 分类 | 坐标 |
+|---------|------|------|
+| 纪念馆 | 纪念设施 | 117.88045, 28.92844, 175.0m |
+| 程家湾老人们的家 | 居民生活 | 117.88210, 28.92944, 171.4m |
+| 碉堡 | 军事遗址 | 117.88235, 28.92964, 174.9m |
+| 炮台 | 军事遗址 | 117.88170, 28.92695, 219.5m |
+| 程家湾突围指挥部 | 革命旧址 | 117.88075, 28.92838, 215.4m |
+| 胜利之门 | 纪念设施 | 117.88045, 28.92801, 171.4m |
+| 程家湾广场 | 公共设施 | 117.68216, 28.92739, 229.8m |
+
+每个地标都包含：名称、详细描述、经纬度坐标、海拔高度、分类标签。
+
+#### 2. 创建数据库导出工具（`backend/export_db.py`）
+新增 SQL 导出脚本，提供两种数据库分发方式：
+
+**方式一（推荐）**：`python init_db.py`
+- 跨平台，不依赖 mysqldump
+- 数据结构清晰，易于维护和定制
+- 他人克隆仓库后直接运行即可初始化
+
+**方式二（可选）**：`python export_db.py`
+- 导出完整 SQL 文件（包含表结构和数据）
+- 适用于数据迁移或备份场景
+- 生成带时间戳的备份文件
+
+#### 3. 更新 README.md 部署文档
+新增详细的部署指南：
+- **前置要求**：Node.js、Python、MySQL 版本要求
+- **环境配置**：数据库连接配置（代码修改 vs 环境变量）
+- **数据库管理**：两种初始化方式的使用说明
+- **GitHub 部署流程**：需要上传的文件、.gitignore 配置、他人克隆部署步骤
+- **生产环境建议**：云数据库、HTTPS、对象存储、进程管理
+
+#### 4. 完善 .gitignore
+添加规则防止误提交敏感文件：
+- `*.sql`、`database_backup*.sql`：数据库备份文件
+- `backend/app/config_local.py`：本地配置覆盖文件
+- 保留白名单 `!backend/schema.sql`（如果需要版本化表结构）
+
+### 技术要点
+- **SQLAlchemy ORM**：`init_db.py` 通过 ORM 自动创建表结构，比 SQL 文件更易维护
+- **跨平台兼容**：环境变量方式支持 Windows/Linux/Mac
+- **安全性**：README 强调不要硬编码密码，生产环境使用环境变量
+- **文件体积**：3D Tiles 等大文件建议用 Git LFS 或对象存储
+
+### 使用流程
+
+**项目维护者（你）**：
+```bash
+# 如果修改了数据模型，更新 seeds.py 并提交
+git add backend/app/seeds.py backend/init_db.py
+git commit -m "更新种子数据"
+git push
+```
+
+**他人部署**：
+```bash
+git clone https://github.com/your-repo/cjw-red-map.git
+cd cjw-red-map/backend
+# 修改 config.py 中的数据库密码
+python init_db.py  # 一键初始化数据库
+python run.py      # 启动后端
+```
+
+---
+
 ## 2026-02-13 地标标注圆角化改造
 
 ### 背景
