Add DB sync, dotenv support and media uploads
Introduce a DB-to-seeds sync workflow and media onboarding: add sync_seeds.py to auto-generate backend/app/seeds.py from the MySQL database and include many media files under backend/uploads/. Replace the mysqldump export flow by removing export_db.py and documenting sync/export in README. Add backend/.env.example and update backend/app/config.py to load .env (via python-dotenv) and enforce DB_PASSWORD, plus add python-dotenv to requirements. Update .gitignore to allow committing uploads (with a note to use object storage in production) and refresh README/docs and seeds.py to reflect the new sync-based data workflow and seeded media entries.

--- a/docs/开发日志.md
+++ b/docs/开发日志.md
@@ -2,6 +2,118 @@
 
 ---
 
+## 2026-02-14 引入 .env 环境变量管理敏感配置
+
+### 背景
+之前的修复中，将 MySQL 密码直接硬编码在 `config.py` 中（`DB_PASSWORD = '061128aA'`），这存在严重的安全隐患：
+- 密码泄露风险：如果提交到 GitHub，密码会暴露在公开仓库中
+- 协作困难：每个开发者的 MySQL 密码不同，频繁修改 `config.py` 会产生 Git 冲突
+- 不符合最佳实践：敏感信息应通过环境变量管理，不应硬编码
+
+### 解决方案
+引入 `python-dotenv` 库，通过 `.env` 文件管理敏感配置：
+
+**1. 创建文件**
+- `backend/.env.example` — 示例配置文件（提交到 Git，不含真实密码）
+- `backend/.env` — 实际配置文件（不提交，包含真实密码）
+
+**2. 修改 `config.py`**
+- 自动从 `backend/.env` 加载环境变量
+- 如果 `DB_PASSWORD` 未配置，抛出明确错误提示用户创建 `.env` 文件
+- 移除硬编码的密码
+
+**3. 更新 `requirements.txt`**
+- 添加 `python-dotenv==1.0.1` 依赖
+
+**4. 更新 `.gitignore`**
+- 确认 `.env` 已被忽略（已有规则，添加注释说明）
+
+**5. 更新 `README.md`**
+- 新增"使用 .env 文件（推荐）"配置方式
+- 更新部署流程：`cp .env.example .env` → 编辑密码 → 启动
+
+### 技术要点
+- **python-dotenv**：自动从 `.env` 文件加载环境变量到 `os.environ`
+- **向后兼容**：如果未安装 `python-dotenv`，会提示但不会阻止程序运行（可通过系统环境变量配置）
+- **错误检查**：启动时检查 `DB_PASSWORD` 是否为空，避免运行时才报认证错误
+
+### 使用方法
+```bash
+cd backend
+cp .env.example .env
+# 编辑 .env，修改 DB_PASSWORD=你的MySQL密码
+pip install -r requirements.txt  # 安装 python-dotenv
+python run.py
+```
+
+### 经验教训
+- ✅ 敏感配置必须通过 `.env` 或环境变量管理，绝不硬编码
+- ✅ 提供 `.env.example` 作为模板，方便新开发者快速配置
+- ✅ 在 `config.py` 中加入检查逻辑，给出清晰的错误提示
+
+---
+
+## 2026-02-14 修复 API 500 错误（MySQL 密码配置）并重写 README
+
+### 问题现象
+前端控制台报 `500 (INTERNAL SERVER ERROR)`，`/api/sites` 返回失败，地图上没有任何地标。
+
+### 根因分析
+`backend/app/config.py` 中 `DB_PASSWORD` 默认值（`123456`）与本地 MySQL 实际密码不匹配，导致 PyMySQL 认证失败：
+```
+pymysql.err.OperationalError: (1045, "Access denied for user 'root'@'localhost' (using password: YES)")
+```
+
+### 修复
+- 将 `config.py` 中 `DB_PASSWORD` 默认值改为本机正确密码。
+- 重新验证：`/api/sites` 返回 `code: 0`，8 个地标、10 条媒体正常加载。
+
+### README 重写
+- 新增完整目录结构树、技术栈表格、API 概览表。
+- 新增"MySQL 配置"独立章节，提示每个部署者必须修改密码。
+- 新增"他人从 GitHub 克隆后能否看到完全一样的效果？"专题说明。
+- 新增 `.gitignore` 建议和生产环境部署建议。
+
+### 经验教训
+- **安全**：不要在公开仓库中硬编码真实数据库密码。README 中应使用占位符（`你的MySQL密码`），并提醒开发者通过环境变量或本地 config 文件配置。
+- **排查**：后端 500 错误首先检查数据库连接（密码、主机、端口、服务是否启动），再检查路由逻辑。
+
+---
+
+## 2026-02-14 创建一键数据同步工具 sync_seeds.py
+
+### 背景
+项目使用 MySQL 数据库，通过编辑模式修改的地标坐标、封面图片、媒体资源等数据保存在本地数据库中。  
+但他人部署时依赖 `init_db.py` + `seeds.py` 来初始化数据，而 `seeds.py` 不会自动更新，导致 GitHub 上的数据与本地不一致。  
+**之前的做法**：需要手动运行 `sync_data.py` 导出数据，再人工复制粘贴到 `seeds.py`，非常容易遗漏。
+
+### 解决方案
+创建 `backend/sync_seeds.py` 脚本，一键完成数据库→`seeds.py` 的自动同步。
+
+**工作原理**：
+1. 读取 MySQL 中所有 Site、Media、AudioGuide 数据  
+2. 自动生成格式化的 `seeds.py` 文件内容  
+3. 对比现有文件，如有变化则覆盖写入  
+4. 只导出有实际文件的媒体记录（跳过空 URL 的占位记录）
+
+**使用方法（每次修改数据后）**：
+```bash
+cd backend
+python sync_seeds.py       # 自动重写 seeds.py
+git add app/seeds.py uploads/
+git commit -m "同步地标数据"
+git push
+```
+
+### 技术要点
+- 描述文本自动按句号/逗号折行（每行不超过 72 字符），保持代码可读性
+- 经纬度保留 8 位小数，高度保留 4 位小数，确保坐标精度
+- 媒体记录按 `site_id → sort_order` 排序，保证数据顺序稳定
+- 生成前对比旧文件，无变化时跳过写入，避免无效 diff
+- 删除了旧的 `sync_data.py`（只输出不写入，需要手动复制，已被 `sync_seeds.py` 取代）
+
+---
+
 ## 2026-02-13 地标标注样式二次优化
 
 ### 背景
@@ -56,6 +168,132 @@
 - 仅修改前端 `CesiumViewer.vue`，不涉及后端或数据库变更
 - 坐标信息仍保留在弹窗详情中，用户点击地标后依然可以查看
 - `scaleByDistance` 实现了根据视距自动缩放的效果，近景放大显示、远景缩小避免遮挡
+
+---
+
+## 2026-02-14 解决数据同步问题（地标位置与图片）
+
+### 背景
+项目上传到 GitHub 后，发现他人部署时遇到两个关键问题：
+1. **地标位置不一致**：别人看到的地标坐标与本地不同
+2. **图片无法显示**：详情页的地标封面和媒体图片加载失败
+
+### 原因分析
+
+#### 问题 1：地标坐标不同步
+- **根本原因**：通过编辑模式修改的地标坐标只保存在本地 MySQL 数据库，未同步到 `seeds.py`
+- **影响范围**：8 个地标中有 5 个坐标被精细调整（例如：纪念馆从 `117.88045` 调整为 `117.88044967`）
+- **他人部署**：运行 `init_db.py` 时使用的是 `seeds.py` 中的旧坐标
+
+#### 问题 2：图片文件缺失
+- **根本原因**：`backend/uploads/` 目录被 `.gitignore` 忽略，未提交到 GitHub
+- **影响范围**：15 个图片文件（占用约 2-3MB），包括 5 个封面图和 10 个媒体图片
+- **他人部署**：数据库中保存了图片路径（如 `/uploads/20260213133748_50216999.jpg`），但文件不存在
+
+### 解决方案
+
+#### 1. 创建数据同步工具（`backend/sync_data.py`）
+
+新增脚本，实现以下功能：
+- 从当前数据库导出所有地标数据（坐标、描述、分类、图片路径等）
+- 自动生成可直接复制到 `seeds.py` 的 Python 代码
+- 列出所有需要同步的图片文件清单
+- 检查数据库引用的文件是否全部存在
+
+**使用方法**：
+```bash
+cd backend
+python sync_data.py  # 导出数据并生成报告
+```
+
+#### 2. 更新种子数据（`backend/app/seeds.py`）
+
+使用 `sync_data.py` 导出的最新数据替换了原有的 `sites_data`：
+- 更新了所有 7 个地标的精确坐标（保留到小数点后 5-8 位）
+- 补充了封面图片路径（5 个地标有封面）
+- 同步了编辑后的描述文本
+
+**关键变化示例**：
+| 地标 | 旧坐标（seeds.py） | 新坐标（实际数据库） |
+|------|-------------------|---------------------|
+| 纪念馆 | 117.88045, 28.92844 | 117.88044967, 28.92843615 |
+| 老人们的家 | 117.88210, 28.92944 | 117.88209415, 28.92901258 |
+| 胜利之门 | 117.88045, 28.92801 | 117.88075000, 28.92838000 |
+
+#### 3. 图片文件同步方案
+
+创建了详细的图片同步文档（`docs/图片同步方案.md`），提供 3 种方案：
+
+**方案一（推荐生产环境）**：对象存储（OSS/COS）
+- 将 `uploads/` 下的 15 个文件上传到云存储
+- 修改数据库中的路径为 CDN 地址
+- 优点：专业、稳定、不占仓库空间
+
+**方案二（推荐开源项目）**：Git LFS
+- 使用 Git Large File Storage 管理图片
+- 图片与代码版本化，但不占主仓库空间
+- 优点：开源友好，免费额度 1GB/月
+
+**方案三（当前采用）**：直接提交到仓库
+- 修改 `.gitignore`，允许提交 `uploads/` 目录
+- 优点：简单直接，适合小项目演示
+- 缺点：会增大仓库体积（当前 15 个文件约 2-3MB，可接受）
+
+#### 4. 修改 .gitignore
+
+将 `backend/uploads/` 一行注释掉，允许图片文件被提交：
+```gitignore
+# backend/uploads/  # 注释掉以允许提交图片（临时方案）
+# 生产环境建议使用对象存储（OSS/COS）托管图片，详见 docs/图片同步方案.md
+```
+
+#### 5. 更新 README 部署文档
+
+新增"数据同步"章节，明确说明：
+- 数据同步的必要性和方法
+- 图片同步的两种方案（临时 vs 生产）
+- 同步工具的使用流程
+
+### 技术要点
+
+**数据导出脚本亮点**：
+- 自动格式化描述文本（按 70 字符折行，保持 Python 代码可读性）
+- 扫描数据库引用的所有文件，生成完整清单
+- 检查文件完整性，识别缺失文件
+
+**部署一致性保证**：
+- `seeds.py` 现在包含完整的坐标和图片路径信息
+- 他人运行 `init_db.py` 后，地标位置与原作者一致
+- `uploads/` 目录提交后，图片可正常加载
+
+### 使用流程
+
+**项目维护者（数据有更新时）**：
+```bash
+# 1. 导出最新数据
+cd backend
+python sync_data.py
+
+# 2. 复制输出的 sites_data，替换 seeds.py 中的对应部分
+
+# 3. 提交更改
+git add backend/app/seeds.py backend/uploads/
+git commit -m "同步地标数据和图片"
+git push
+```
+
+**他人部署**：
+```bash
+git clone https://github.com/your-repo/cjw-red-map.git
+cd cjw-red-map/backend
+python init_db.py  # 自动获得最新的坐标和图片路径
+# uploads/ 目录中的图片文件已随仓库一起克隆
+```
+
+### 遗留问题
+
+- **重复地标**：数据库中存在 2 个"程家湾广场"（ID 6 和 7），需要后续清理
+- **对象存储迁移**：当前使用临时方案将图片提交到 GitHub，长期建议迁移到 OSS
 
 ---
 
@@ -207,3 +445,27 @@ python run.py      # 启动后端
 - 分类（`category`）字段现有值：`纪念设施`、`军事遗址`、`革命旧址`、`居民生活`、`公共设施`
 
 ---
+
+## 2026-02-14 整理项目架构并更新 README
+
+### 背景
+为了帮助新贡献者快速上手并减少部署差异，整理并补充了仓库级别的架构说明、关键文件说明、快速启动与验证步骤，并在 README 中加入了数据同步的推荐流程（含 `sync_seeds.py` 与 `export_db.py` 使用说明）。
+
+### 变更内容
+- 更新 `README.md`：添加项目概览、关键文件映射、快速启动命令、数据同步流程和验证步骤。
+- 建议工作流：使用 `sync_seeds.py` 生成/更新 `backend/app/seeds.py`，媒体文件长期存储建议迁移到对象存储（OSS/COS/S3）。
+
+### 操作记录
+```bash
+cd backend
+python sync_seeds.py    # 从本地 DB 生成并更新 app/seeds.py（如有改动）
+git add app/seeds.py
+git add backend/uploads/ # 若采用直接提交图片
+git commit -m "doc(readme): 更新 README 与数据同步说明"
+git push
+```
+
+### 注意点
+- `init_db.py` 仍然是破坏性重建脚本（会 drop_all 并重建表），请在运行前备份数据库或使用 `export_db.py` 生成 SQL 快照。
+- 长期建议：建立 CI 自动化备份（merge 到 main 时自动生成 `.sql` 并上传到私有存储或 release artifact）。
+
