Improve audio player UX; add site list
Frontend: Rework AudioPlayer UI to use a smooth RAF-driven progress bar with a yellow star + red circular background and glow/trailing effects; preload audio metadata to show real durations; add click-to-seek and time display. Replace timeupdate with requestAnimationFrame in audio store, add startRaf/stopRaf and a stop() method to pause/reset playback. Ensure SiteDetail stops playback on unmount and render AudioPlayer for each guide. Add SiteListView and route /sites, and update HomeView to link to the new list. Backend/docs: update migration SQL (adjust guide durations to 20s and fix comment), replace several recorder MP3 binaries, and add a changelog entry in docs describing the frontend improvements.

--- a/docs/开发日志.md
+++ b/docs/开发日志.md
@@ -469,3 +469,49 @@ git push
 - `init_db.py` 仍然是破坏性重建脚本（会 drop_all 并重建表），请在运行前备份数据库或使用 `export_db.py` 生成 SQL 快照。
 - 长期建议：建立 CI 自动化备份（merge 到 main 时自动生成 `.sql` 并上传到私有存储或 release artifact）。
 
+---
+
+## 2026-02-16 前端体验优化：进度条平滑、星星光效、离页停播、地标列表
+
+### 改动概述
+集中修复和优化了 4 个前端交互问题。
+
+### 1. 进度条平滑更新
+**问题**：原方案使用 HTML5 Audio 的 `timeupdate` 事件（约 250ms 触发一次），导致进度条视觉上一卡一卡。
+**方案**：改用 `requestAnimationFrame` 循环读取 `currentTime`，约 16ms 更新一次，进度条过渡更丝滑。
+- 文件：`frontend/src/stores/audio.js`
+- 移除 `timeupdate` 监听，新增 `startRaf()` / `stopRaf()` 函数
+
+### 2. 黄星动态光效与拖影
+**变更**：进度条指示器从红色星 ★ 改为金黄色 ★，播放中有脉冲光效和向左扩散的多层拖影。
+- 文件：`frontend/src/components/AudioPlayer.vue`
+- 使用 CSS `@keyframes starGlow` 实现呼吸式缩放 + 多层 `drop-shadow`
+- 仅 `.is-playing` 状态时触发动画，静止时只有基础光晕
+
+### 3. 离开页面时停止音频
+**问题**：从地标详情页导航回主页后，语音解说仍在后台播放。
+**方案**：在 `SiteDetail.vue` 添加 `onBeforeUnmount` 钩子调用 `audioStore.stop()`。`stop()` 是新增方法，会暂停、重置 `currentTime`、清除 `currentGuide`。
+- 文件：`frontend/src/stores/audio.js` — 新增 `stop()` 方法
+- 文件：`frontend/src/views/SiteDetail.vue` — `onBeforeUnmount(() => audioStore.stop())`
+
+### 4. 地标列表页
+**问题**：主页"地标详情"直接跳转到 `/site/1`，无法选择其他地标。
+**方案**：新增 `SiteListView.vue` 列表页，展示所有地标（封面、名称、分类、简介），点击跳转详情。
+- 新增：`frontend/src/views/SiteListView.vue`
+- 路由：新增 `/sites` → `SiteListView`
+- 主页链接从 `/site/1` 改为 `/sites`
+
+---
+
+## 2026-02-16 播放器优化：黄星红圈背景 + 音频真实时长
+
+### 1. 黄星加红色圆圈背景
+将进度条上的黄色星星指示器包裹在一个 26px 红色圆形背景中，视觉更醒目。
+- 文件：`frontend/src/components/AudioPlayer.vue`
+- 新增 `.star-circle` 样式类，`background: #C41E24`，圆角 50%
+
+### 2. 音频时长改为真实时长
+**问题**：未播放时显示的时长来自种子数据中的固定字段（如 `duration: 45`），与音频文件实际时长不符。
+**方案**：组件挂载时通过 `new Audio()` 预加载音频元数据（`preload: 'metadata'`），从 `loadedmetadata` 事件获取真实时长。
+- 优先级：正在播放时用 store 中的时长 → 预加载获取的真实时长 → 种子数据回退值
+
