Use red route color and add full DB export
Switch route visuals to the red theme (#C41E24) across Cesium viewer (startNavigation, drawing, savePath, renderRoute, copyRoute). Add a complete database dump backend/migrations/full_data_dump.sql containing sites, media, audio_guides and routes (with route colors set to #C41E24) and include the referenced image upload (backend/uploads/20260216123441_7561a453.jpg). Update docs with a changelog and import instructions. Purpose: unify map styling and provide an easy way to seed the project database.

--- a/docs/开发日志.md
+++ b/docs/开发日志.md
@@ -515,3 +515,78 @@ git push
 **方案**：组件挂载时通过 `new Audio()` 预加载音频元数据（`preload: 'metadata'`），从 `loadedmetadata` 事件获取真实时长。
 - 优先级：正在播放时用 store 中的时长 → 预加载获取的真实时长 → 种子数据回退值
 
+---
+
+## 2026-02-16 路线颜色改为红色 + 完整数据导出
+
+### 1. 路线颜色统一改为红色 (#C41E24)
+
+**问题**：导航路线在 Cesium 地图上显示为蓝色（`CYAN`），与红色主题不协调。
+
+**改动位置**：`frontend/src/components/CesiumViewer.vue`
+- **导航高亮路线** `startNavigation()`：`Cesium.Color.CYAN` → `Cesium.Color.fromCssColorString('#C41E24')`
+- **绘制临时线**（2处）：`Cesium.Color.YELLOW` → `Cesium.Color.fromCssColorString('#C41E24')`
+- **保存路径默认色** `savePath()`：`line_color: '#FFFF00'` → `'#C41E24'`
+- **渲染已有路径** `renderRoute()`：回退色从 `#FFFF00` → `'#C41E24'`
+- **数据库**：已有 5 条路线的 `line_color` 字段均已更新为 `#C41E24`
+
+### 2. 完整数据库导出为 SQL 文件
+
+**目的**：让其他开发者部署项目时可直接导入全部数据（地标、媒体、语音导览、路线），无需逐个执行迁移脚本。
+
+**输出文件**：`backend/migrations/full_data_dump.sql`
+
+**包含内容**：
+| 表 | 记录数 | 说明 |
+|--|--|--|
+| `sites` | 7 | 红色地标点（老人家、碉堡、炮台、指挥部、胜利之门、广场、纪念馆） |
+| `media` | 10 | 图片资源（纪念馆 4 张、老人家 2 张、指挥部 4 张） |
+| `audio_guides` | 7 | 语音导览（每个地标 1 条） |
+| `routes` | 5 | 3D 漫游路径（红色 #C41E24） |
+
+**使用方法**：
+```bash
+# 1. 创建数据库
+mysql -u root -p -e "CREATE DATABASE IF NOT EXISTS cjw_red_map CHARACTER SET utf8mb4;"
+
+# 2. 导入完整数据
+mysql -u root -p cjw_red_map < backend/migrations/full_data_dump.sql
+```
+
+**注意**：该文件包含 `DROP TABLE IF EXISTS`，执行后会**覆盖**已有数据。
+
+---
+
+## 2026-02-16 数据库迁移：routes 路径表 + audio_guides 数据更新
+
+### 背景
+需要将 `backend/migrations/` 下的两个 SQL 文件执行到 MySQL 数据库中，完成路径数据和音频导览数据的同步更新。
+
+### 执行的操作
+
+**1. 清空并重新插入 audio_guides 数据**
+- 先 `DELETE FROM audio_guides` 清空旧数据（7 条），再插入新的 7 条记录
+- 每条记录对应一个地标的语音解说：老人们的家、碉堡、炮台、指挥部、胜利之门、广场、纪念馆
+- duration 字段值来自 SQL 文件中的设定值（12~20 秒不等）
+
+**2. 重建 routes 表并插入 5 条游览路径**
+- 执行 `create_routes_table.sql`：先 DROP 再 CREATE routes 表
+- 插入 5 条路径数据：
+  - 老人的家→纪念馆
+  - 纪念馆→炮台
+  - 纪念馆→碉堡
+  - 纪念馆→指挥部
+  - 纪念馆→程家湾广场
+- 每条路径包含完整的 3D 坐标点数组（JSON 格式，含经度、纬度、高度）
+- 线条颜色统一为黄色 `#FFFF00`，宽度 5
+
+### 执行方式
+- 编写临时 Python 脚本 `run_migrations.py`，使用 PyMySQL 直接连接数据库
+- 自动处理 SQL 文件中的多行注释（`/* ... */`）和 `USE` 语句
+- 执行完成后自动验证数据条数，确认无误后删除临时脚本
+
+### 验证结果
+- ✅ routes 表：5 条路径记录
+- ✅ audio_guides 表：7 条音频导览记录
+- ✅ 所有 site_id 正确对应 7 个地标
+
